# whisper-realtime-transcriber

./: .gitignore  LICENSE  README.md  advanced_listener.py  advanced_processing.py  audio_streaming.py  dev-requirements.in  dev-requirements.txt  env_installation.txt  example.py  install.sh  interactions.py  make_json.py  metrics.json  metrics_template.json  model_eval_script.py  pyproject.toml  pytorch_installation_val.py  requirements.in  requirements.txt  ruff.toml  transcriber_config.yaml
.github/workflows/: pre_release.yml  pull_request.yml  push.yml  release.yml
data/speaker1/: metadata.json
docs/pysistent/: Inference.html  InputStreamGenerator.html  LiveAudioTranscriber.html  Models.html  index.html  utils.html
docs/transcriber/: Inference.html  InputStreamGenerator.html  LiveAudioTranscriber.html  Models.html  index.html  utils.html
pysistent/: Inference.py  InputStreamGenerator.py  LiveAudioTranscriber.py  Model.py  Models.py  __init__.py  main.py  play_audio.py  utils.py
pysistent/tmpdir_tts/: hyperparams.yaml  model.ckpt
pysistent/tmpdir_vocoder/: generator.ckpt  hyperparams.yaml
tests/: test_inputstream_generator.py  test_whisper_model.py
transcriber/: InputStreamGenerator.py  LiveAudioTranscriber.py  Models.py  RealtimeTranscriber.py  WhisperModel.py  __init__.py  __main__.py  transcriber_app.py  utils.py
transcriber/distilled/: Distilled.py  __init__.py
transcriber/pretrained/: Pretrained.py  (+1 more)
utils/: __init__.py  decorators.py  utils.py
whisper_realtime_transcriber/: InputStreamGenerator.py  RealtimeTranscriber.py  WhisperModel.py
(+19 files in other folders)
