[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-realtime-transcriber"
version = "0.1"
description = "A real-time transcriber for various Whisper models (hugginggface) :)"
readme = "README.md"
authors = [{ name = "Nico Fuchs" }]

[project.scripts]
whisper-realtime-transcriber = "transcriber.__main__:main"