[tool.poetry]
name = "whisper-realtime-transcriber"
version = "0.1.3"
description = "Let whisper models transcribe in realtime."
authors = ["Nico Fuchs"]
readme = "README.md"
packages = [{include = "whisper_realtime_transcriber"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25"
sounddevice = "^0.5.0"
ffmpeg-python = "^0.2.0"
asyncio = "^3.4.3"
accelerate = "^0.33.0"
torch = "^2.4.0"
transformers = "^4.44.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"